Antialias line drawing characters

Summary:
BUG: 397985

Use antialiasing when drawing unicode box characters to improve the
rendering of rounded corners.

Test Plan:
# Execute `echo -e '\u256d\u256e\n\u2570\u256f'`
# The box should have rounded corners

Before fix:

{F6301318}

After fix:

{F6301319}

Reviewers: #konsole, hindenburg

Reviewed By: #konsole, hindenburg

Subscribers: ngraham, konsole-devel

Tags: #konsole

Differential Revision: https://phabricator.kde.org/D15915